searchbar alignment fix

--- a/frontend/src/components/layout/user/navbar/Navbar.css
+++ b/frontend/src/components/layout/user/navbar/Navbar.css
@@ -2,7 +2,8 @@
   position: sticky;
   top: 0;
   z-index: 999;
-  height: 10vh;
+  height: 100%;
+  max-height: 10vh;
   width: 100vw;
   display: flex;
   align-items: center;
@@ -191,11 +192,12 @@
   --border-color: #6d001d;
   --after-border-radius: 1px;
   position: absolute;
-  top: 12vh;
-  left: 50%;
-  transform: translateX(-50%);
+  top: 50%;
+  transform: translate(0%, -50%);
+  right: 13.5vw;
+
   min-width: var(--minWidth-of-input);
-  width: 50%;
+  width: 8rem;
   height: var(--height-of-input);
   display: flex;
   align-items: center;
@@ -646,7 +648,7 @@ input:not(:placeholder-shown) ~ .reset {
 }
 
 .input::placeholder {
-  color: #808080;
+  color: #b56f82;
 }
 
 /* Clear (Close) icon */
@@ -743,6 +745,10 @@ input:not(:placeholder-shown) ~ .reset {
   color: rgba(0, 0, 0, 0.45);
 }
 
+#basic-menu .css-1toxriw-MuiList-root-MuiMenu-list {
+  padding-top: 0 !important;
+}
+
 /* Animation */
 @keyframes fadeIn {
   from {
@@ -756,6 +762,23 @@ input:not(:placeholder-shown) ~ .reset {
 }
 
 /* Responsive Styles */
+
+@media screen and (max-width: 1210px) {
+  .form {
+    width: 50%;
+    top: 140%;
+    right: 3rem;
+    /* transform: translate(-50%, -50%); */
+  }
+}
+@media screen and (max-width: 768px) {
+  .form {
+    width: 50%;
+
+    left: 50%;
+    transform: translate(-50%, -50%);
+  }
+}
 
 @media screen and (max-width: 1024px) {
   .navLinks {
